use unix dir sep

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
         run: dotnet build -c ${{ env.CONFIG }}
 
       - name: Pack NuGet package
-        run: dotnet pack -c ${{ env.CONFIG }} ${{ env.PROJECT_NAME }}\${{ env.PROJECT_NAME }}.csproj -o ${{ env.NUPKG_DIR }}
+        run: dotnet pack -c ${{ env.CONFIG }} ${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj -o ${{ env.NUPKG_DIR }}
 
       - name: Push generated package to NuGet
-        run: dotnet nuget push ${{ env.NUPKG_DIR }}\*.nupkg -Source '${{ env.NUGET_SOURCE }}' --api-key ${{ env.NUGET_API_KEY }}
+        run: dotnet nuget push ${{ env.NUPKG_DIR }}/*.nupkg -Source '${{ env.NUGET_SOURCE }}' --api-key ${{ env.NUGET_API_KEY }}
