Uplift Saucery nuget version

--- a/Saucery/Saucery.csproj
+++ b/Saucery/Saucery.csproj
@@ -9,15 +9,15 @@
   <PropertyGroup>
 	  <IsPackable>true</IsPackable>
 	  <PackageId>Saucery</PackageId>
-      <PackageVersion>4.0.0</PackageVersion>
+      <PackageVersion>4.1.0</PackageVersion>
       <Authors>Andrew Gray</Authors>
       <Company>SauceForge</Company>
       <Copyright>Copyright Andrew Gray 2014-2023</Copyright>
       <Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
       <PackageReleaseNotes>
         ChangeLog:
-        v4.0.0
-        - Initial Release
+        v4.1.0
+        - Initial Release with dependency on Saucery.Core
       </PackageReleaseNotes>
       <PackageProjectUrl>https://github.com/Sauceforge/Saucery</PackageProjectUrl>
 	  <PackageIcon>Saucery.NUnit.128x128.png</PackageIcon>
