Update Saucery to use Saucery.Core

--- a/ExternalMerlin/ExternalMerlin.csproj
+++ b/ExternalMerlin/ExternalMerlin.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Saucery" Version="4.0.3" />
+    <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.3.0" />
+    <PackageReference Include="Saucery" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
