--- a/Saucery.Core/Saucery.Core.csproj
+++ b/Saucery.Core/Saucery.Core.csproj
@@ -28,12 +28,13 @@
 	<ItemGroup>
 		<PackageReference Include="Appium.WebDriver" Version="5.0.0-beta03" />
 		<PackageReference Include="Castle.Core" Version="5.1.1" />
+		<PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.3.0" />
 		<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="RestSharp" Version="108.0.3" />
-		<PackageReference Include="Selenium.Support" Version="4.8.1" />
-		<PackageReference Include="Selenium.WebDriver" Version="4.8.1" />
+		<PackageReference Include="Selenium.Support" Version="4.8.2" />
+		<PackageReference Include="Selenium.WebDriver" Version="4.8.2" />
 		<PackageReference Include="Shouldly" Version="4.1.0" />
 		<None Include="Images\Saucery.Core.128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
