--- a/ExternalMerlin/ExternalMerlin.csproj
+++ b/ExternalMerlin/ExternalMerlin.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.3.0" />
-    <PackageReference Include="Saucery" Version="4.1.0" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+	  <PackageReference Include="Saucery" Version="4.1.1" />
   </ItemGroup>
 
 </Project>
