--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - develop
+      - 'dependabot/**'
       - 'releases/**'
       - 'feat/**'
       - 'feature/**'
