--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,8 +15,10 @@ env:
   UT_DIR: Saucery.Core.Tests
   INT_DIR: Merlin.NUnit
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj           # full path to your unit test project file
-  M_NUNIT_PROJECT: Merlin.NUnit/Merlin.NUnit.csproj                  # full path to nunit integration test project file
-  EM_NUNIT_PROJECT: ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj # full path to nunit integration test project file
+  M_NUNIT_PROJECT: Merlin.NUnit/Merlin.NUnit.csproj                  # full path to nunit internal integration test project file
+  EM_NUNIT_PROJECT: ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj # full path to nunit external integration test project file
+  M_XUNIT_PROJECT: Merlin.XUnit/Merlin.XUnit.csproj                  # full path to xunit internal integration test project file
+  EM_XUNIT_PROJECT: ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
   CONFIG: Release
