--- a/Saucery.XUnit/Saucery.XUnit.csproj
+++ b/Saucery.XUnit/Saucery.XUnit.csproj
@@ -29,8 +29,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-		<PackageReference Include="Microsoft.TestPlatform" Version="17.5.0" />
 		<PackageReference Include="XUnit" Version="2.4.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 		<PackageReference Include="Saucery.Core" Version="4.0.1" />
 		<None Include="Images\Saucery.XUnit.128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
