more stuff that compiles but needs more work

--- a/Merlin.XUnit/Merlin.XUnit.csproj
+++ b/Merlin.XUnit/Merlin.XUnit.csproj
@@ -22,4 +22,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Saucery.Core\Saucery.Core.csproj" />
+    <ProjectReference Include="..\Saucery.XUnit\Saucery.XUnit.csproj" />
+  </ItemGroup>
+
 </Project>
