--- a/Merlin.XUnit/Merlin.XUnit.csproj
+++ b/Merlin.XUnit/Merlin.XUnit.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Saucery.Core\Saucery.Core.csproj" />
+    <ProjectReference Include="..\Saucery.Tests.Common\Saucery.Tests.Common.csproj" />
     <ProjectReference Include="..\Saucery.XUnit\Saucery.XUnit.csproj" />
   </ItemGroup>
 
