--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,11 +13,12 @@ env:
   PROJECT_NAME: Saucery
   SOLN_FILE: Saucery.sln                                             # full path to your solution file
   UT_DIR: Saucery.Core.Tests
-  INT_DIR: Merlin.NUnit
+  NUNIT_INT_DIR: Merlin.NUnit
+  XUNIT_INT_DIR: Merlin.XUnit
   UT_PROJECT: Saucery.Core.Tests/Saucery.Core.Tests.csproj           # full path to your unit test project file
-  M_NUNIT_PROJECT: Merlin.NUnit/Merlin.NUnit.csproj                  # full path to nunit internal integration test project file
+  M_NUNIT_PROJECT: ${{ env.NUNIT_INT_DIR }}/Merlin.NUnit.csproj      # full path to nunit internal integration test project file
   EM_NUNIT_PROJECT: ExternalMerlin.NUnit/ExternalMerlin.NUnit.csproj # full path to nunit external integration test project file
-  M_XUNIT_PROJECT: Merlin.XUnit/Merlin.XUnit.csproj                  # full path to xunit internal integration test project file
+  M_XUNIT_PROJECT: ${{ env.XUNIT_INT_DIR }}/Merlin.XUnit.csproj      # full path to xunit internal integration test project file
   EM_XUNIT_PROJECT: ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj # full path to xunit external integration test project file
   SAUCE_USER_NAME: ${{ secrets.SAUCE_USER_NAME }}
   SAUCE_API_KEY: ${{ secrets.SAUCE_API_KEY }}
@@ -88,7 +89,7 @@ jobs:
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.1.19
       with:
-        reports: ${{ env.UT_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }};${{ env.INT_DIR }}/${{ env.INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        reports: ${{ env.UT_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }};${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT_INT_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
