--- a/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
+++ b/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
+    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.37.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Saucery.Core" Version="4.0.1" />
