--- a/Saucery.Core/Saucery.Core.csproj
+++ b/Saucery.Core/Saucery.Core.csproj
@@ -26,15 +26,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Appium.WebDriver" Version="5.0.0-beta04" />
+		<PackageReference Include="Appium.WebDriver" Version="5.0.0-rc.1" />
 		<PackageReference Include="Castle.Core" Version="5.1.1" />
 		<PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.3.0" />
 		<PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
 		<!--<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />-->
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="RestSharp" Version="110.2.0" />
-		<PackageReference Include="Selenium.Support" Version="4.12.2" />
-		<PackageReference Include="Selenium.WebDriver" Version="4.12.2" />
+		<PackageReference Include="Selenium.Support" Version="4.12.4" />
+		<PackageReference Include="Selenium.WebDriver" Version="4.12.4" />
 		<PackageReference Include="Shouldly" Version="4.2.1" />
 		<None Include="Images\Saucery.Core.128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
