--- a/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
+++ b/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
     <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.38.0" />
-    <PackageReference Include="NUnit" Version="4.0.0-beta.1" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Saucery.Core" Version="4.0.1" />
     <None Include="Images\Saucery.NUnit.128x128.png" Pack="true" PackagePath="\" />
