--- a/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
+++ b/ExternalMerlin.XUnit/ExternalMerlin.XUnit.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.1.0" />
 	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 	<PackageReference Include="xunit.runner.visualstudio" Version="2.5.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
