--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,118 +69,115 @@ jobs:
         name: unit-test-results
         path: ${{ env.UT_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}
 
-  xunit-integration-tests:
-    runs-on: ubuntu-latest
-    needs: build
+  # xunit-integration-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
-        dotnet-version: 8.0.x
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+  #       dotnet-version: 8.0.x
     
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run XUnit Integration Tests
-      uses: b3b00/coverlet-action@1.2.7
-      with:
-        testProject: ${{ env.M_XUNIT_PROJECT }}
-        output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.XUnit]Tests.*'
+  #   - name: Run XUnit Integration Tests
+  #     uses: b3b00/coverlet-action@1.2.7
+  #     with:
+  #       testProject: ${{ env.M_XUNIT_PROJECT }}
+  #       output: ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
+  #       outputFormat: ${{ env.COVERAGE_FORMAT }}
+  #       #threshold: ${{ env.COVERAGE_THRESHOLD }}
+  #       excludes: '[Merlin.XUnit]Tests.*'
 
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: xunit-integration-test-results
-        path: ${{ env.XUNIT_INT_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
+  #   - name: Publish Artifacts
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: xunit-integration-test-results
+  #       path: ${{ env.XUNIT_INT_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
-  nunit-integration-tests:
-    runs-on: ubuntu-latest
-    needs: xunit-integration-tests
+  # nunit-integration-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: xunit-integration-tests
 
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
-        dotnet-version: 8.0.x
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+  #       dotnet-version: 8.0.x
     
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run NUnit Integration Tests
-      uses: b3b00/coverlet-action@1.2.7
-      with:
-        testProject: ${{ env.M_NUNIT_PROJECT }}
-        output: ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.NUnit]Tests.*'
+  #   - name: Run NUnit Integration Tests
+  #     uses: b3b00/coverlet-action@1.2.7
+  #     with:
+  #       testProject: ${{ env.M_NUNIT_PROJECT }}
+  #       output: ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
+  #       outputFormat: ${{ env.COVERAGE_FORMAT }}
+  #       #threshold: ${{ env.COVERAGE_THRESHOLD }}
+  #       excludes: '[Merlin.NUnit]Tests.*'
 
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: nunit-integration-test-results
-        path: ${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
+  #   - name: Publish Artifacts
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: nunit-integration-test-results
+  #       path: ${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
-  xunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: nunit-integration-tests
+  # xunit-external-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: nunit-integration-tests
 
-    steps:
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+  #       dotnet-version: 8.0.x
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
-        dotnet-version: 8.0.x
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
+  #   - name: Run External XUnit Integration Tests
+  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT_PROJECT }}
 
-    - name: Run External XUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_XUNIT_PROJECT }}
+  # nunit-external-tests:
+  #   runs-on: ubuntu-latest
+  #   needs: xunit-external-tests
 
-  nunit-external-tests:
-    runs-on: ubuntu-latest
-    needs: xunit-external-tests
+  #   steps:
+  #   - name: Checkout Code
+  #     uses: actions/checkout@v4
 
-    steps:
+  #   - name: Setup dotnet
+  #     uses: actions/setup-dotnet@v3
+  #     with:
+  #       # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+  #       dotnet-version: 8.0.x
 
-    - name: Checkout Code
-      uses: actions/checkout@v4
+  #   - name: Compile solution
+  #     run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v3
-      with:
-        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
-        dotnet-version: 8.0.x
-
-    - name: Compile solution
-      run: dotnet build -c ${{ env.CONFIG }}
-
-    - name: Run External NUnit Integration Tests
-      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_NUNIT_PROJECT }}
+  #   - name: Run External NUnit Integration Tests
+  #     run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_NUNIT_PROJECT }}
 
   generate-report:
     runs-on: ubuntu-latest
     needs: [build, xunit-integration-tests, nunit-integration-tests, xunit-external-tests, nunit-external-tests]
 
     steps:
-
     - name: Download unit-test results
       uses: actions/download-artifact@v3
       with:
