--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -185,17 +185,17 @@ jobs:
         name: unit-test-results
         path: ${{ env.UT_DIR }}/${{ env.UNIT_COVERAGE_FILENAME }}
 
-    - name: Download xunit-integration-test results
-      uses: actions/download-artifact@v3
-      with:
-        name: xunit-integration-test-results
-        path: ${{ env.XUNIT_INT_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
+    # - name: Download xunit-integration-test results
+    #   uses: actions/download-artifact@v3
+    #   with:
+    #     name: xunit-integration-test-results
+    #     path: ${{ env.XUNIT_INT_DIR }}/${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
-    - name: Download nunit-integration-test results
-      uses: actions/download-artifact@v3
-      with:
-        name: nunit-integration-test-results
-        path: ${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
+    # - name: Download nunit-integration-test results
+    #   uses: actions/download-artifact@v3
+    #   with:
+    #     name: nunit-integration-test-results
+    #     path: ${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.2.0
