--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -103,7 +103,7 @@ jobs:
 
   nunit-integration-tests:
     runs-on: ubuntu-latest
-    needs: xunit-integration-tests
+    needs: build
 
     steps:
     - name: Checkout Code
