--- a/Saucery.XUnit/Saucery.XUnit.csproj
+++ b/Saucery.XUnit/Saucery.XUnit.csproj
@@ -14,7 +14,7 @@
 		<PackageVersion>4.4.4</PackageVersion>
 		<Authors>Andrew Gray</Authors>
 		<Company>SauceForge</Company>
-		<Copyright>Copyright Andrew Gray 2014-2023</Copyright>
+		<Copyright>Copyright Andrew Gray 2014</Copyright>
 		<Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
 		<PackageReleaseNotes>
 			ChangeLog:
