--- a/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
+++ b/Saucery.Playwright.NUnit/Saucery.Playwright.NUnit.csproj
@@ -16,7 +16,7 @@
       <PackageVersion>4.4.6</PackageVersion>
       <Authors>Andrew Gray</Authors>
       <Company>SauceForge</Company>
-      <Copyright>Copyright Andrew Gray 2014-2023</Copyright>
+      <Copyright>Copyright Andrew Gray 2014</Copyright>
       <Description>Sorcery for SauceLabs - Unlocking SauceLabs capability</Description>
       <PackageReleaseNotes>
         ChangeLog:
