--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -213,7 +213,7 @@ jobs:
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [build, xunit-integration-tests, nunit-integration-tests, xunit-external-tests, nunit-external-tests]
+    needs: [build, xunit-integration-tests, xunit-real-integration-tests, nunit-integration-tests, xunit-external-tests, nunit-external-tests]
     
     steps:
     - name: Download unit-test results
