--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -139,6 +139,38 @@ jobs:
         name: nunit-integration-test-results
         path: ${{ env.NUNIT_INT_DIR }}/${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
+  nunit-real-integration-tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 8.0.x
+    
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run NUnit Integration Tests
+      uses: b3b00/coverlet-action@11.9
+      with:
+        testProject: ${{ env.M_RD_NUNIT_PROJECT }}
+        output: ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+        outputFormat: ${{ env.COVERAGE_FORMAT }}
+        #threshold: ${{ env.COVERAGE_THRESHOLD }}
+        excludes: '[Merlin.NUnit.RealDevices]Tests.*'
+
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: nunit-real-integration-test-results
+        path: ${{ env.NUNIT_RD_INT_DIR }}/${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+
   xunit-real-integration-tests:
     runs-on: ubuntu-latest
     needs: xunit-integration-tests
@@ -173,7 +205,7 @@ jobs:
 
   xunit-external-tests:
     runs-on: ubuntu-latest
-    needs: nunit-integration-tests
+    needs: nunit-real-integration-tests
 
     steps:
     - name: Checkout Code
@@ -193,7 +225,7 @@ jobs:
 
   nunit-external-tests:
     runs-on: ubuntu-latest
-    needs: nunit-integration-tests
+    needs: nunit-real-integration-tests
 
     steps:
     - name: Checkout Code
@@ -213,7 +245,7 @@ jobs:
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [build, xunit-integration-tests, xunit-real-integration-tests, nunit-integration-tests, xunit-external-tests, nunit-external-tests]
+    needs: [build, xunit-integration-tests, xunit-real-integration-tests, nunit-integration-tests, nunit-real-integration-tests, xunit-external-tests, nunit-external-tests]
     
     steps:
     - name: Download unit-test results
@@ -230,6 +262,16 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: nunit-integration-test-results
+
+    - name: Download xunit-real-integration-test results
+      uses: actions/download-artifact@v4
+      with:
+        name: xunit-real-integration-test-results
+
+    - name: Download nunit-real-integration-test results
+      uses: actions/download-artifact@v4
+      with:
+        name: nunit-real-integration-test-results
     
     - name: Display structure of downloaded files
       run: ls -R
@@ -237,7 +279,11 @@ jobs:
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.3.6
       with:
-        reports: ${{ env.UNIT_COVERAGE_FILENAME }};${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        reports: ${{ env.UNIT_COVERAGE_FILENAME }};
+                 ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
+                 ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+                 ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
