--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -245,9 +245,56 @@ jobs:
     - name: Run External NUnit Integration Tests
       run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_NUNIT_PROJECT }}
 
+  xunit-real-external-tests:
+    runs-on: ubuntu-latest
+    needs: xunit-real-integration-tests
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 8.0.x
+
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run External XUnit Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_XUNIT_PROJECT }}
+
+  nunit-real-external-tests:
+    runs-on: ubuntu-latest
+    needs: xunit-real-integration-tests
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        # Check for latest at link at .NET 8 download page (https://dotnet.microsoft.com/download/dotnet/8.0)
+        dotnet-version: 8.0.x
+
+    - name: Compile solution
+      run: dotnet build -c ${{ env.CONFIG }}
+
+    - name: Run External NUnit Integration Tests
+      run: dotnet test -c ${{ env.CONFIG }} ${{ env.EM_RD_NUNIT_PROJECT }}
+
   generate-report:
     runs-on: ubuntu-latest
-    needs: [build, xunit-integration-tests, xunit-real-integration-tests, nunit-integration-tests, nunit-real-integration-tests, xunit-external-tests, nunit-external-tests]
+    needs: [build, xunit-integration-tests, 
+            xunit-real-integration-tests, 
+            nunit-integration-tests, 
+            nunit-real-integration-tests, 
+            xunit-external-tests, 
+            nunit-external-tests, 
+            xunit-real-external-tests, 
+            nunit-real-external-tests]
     
     steps:
     - name: Download unit-test results
