--- a/Saucery.XUnit/Saucery.XUnit.csproj
+++ b/Saucery.XUnit/Saucery.XUnit.csproj
@@ -11,7 +11,8 @@
 	<PropertyGroup>
 		<IsPackable>true</IsPackable>
 		<PackageId>Saucery.XUnit</PackageId>
-		<PackageVersion>4.5.1</PackageVersion>
+		<PackageVersion>4.5.2</PackageVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 		<Authors>Andrew Gray</Authors>
 		<Company>SauceForge</Company>
 		<Copyright>Copyright Andrew Gray 2014</Copyright>
@@ -49,6 +50,7 @@
 	  <None Update="testhost.runtimeconfig.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 
 </Project>
