--- a/Saucery/Saucery.csproj
+++ b/Saucery/Saucery.csproj
@@ -13,7 +13,8 @@
   <PropertyGroup>
 	  <IsPackable>true</IsPackable>
 	  <PackageId>Saucery</PackageId>
-      <PackageVersion>4.5.1</PackageVersion>
+      <PackageVersion>4.5.2</PackageVersion>
+      <PackageReadmeFile>README.md</PackageReadmeFile>
       <Authors>Andrew Gray</Authors>
       <Company>SauceForge</Company>
       <Copyright>Copyright Andrew Gray 2014</Copyright>
@@ -45,6 +46,7 @@
     <None Update="testhost.runtimeconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
