--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -176,7 +176,8 @@ jobs:
 
   xunit-real-integration-tests:
     runs-on: ubuntu-latest
-    needs: xunit-integration-tests
+    # needs: xunit-integration-tests
+    needs: build
 
     steps:
     - name: Checkout Code
@@ -288,7 +289,8 @@ jobs:
 
   generate-report:
     runs-on: ubuntu-latest
-    needs: [build, xunit-integration-tests, 
+    needs: [build, 
+            xunit-integration-tests, 
             xunit-real-integration-tests, 
             nunit-integration-tests, 
             nunit-real-integration-tests, 
@@ -329,11 +331,12 @@ jobs:
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.3.6
       with:
-        reports: ${{ env.UNIT_COVERAGE_FILENAME }};
-                 ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};
-                 ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
-                 ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
-                 ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        # reports: ${{ env.UNIT_COVERAGE_FILENAME }};
+        #          ${{ env.NUNIT_INTEGRATION_COVERAGE_FILENAME }};
+        #          ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
+        #          ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
+        #          ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+        reports: '*\*.xml'
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
