--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -336,7 +336,7 @@ jobs:
         #          ${{ env.XUNIT_INTEGRATION_COVERAGE_FILENAME }};
         #          ${{ env.XUNIT_RD_INTEGRATION_COVERAGE_FILENAME }}
         #          ${{ env.NUNIT_RD_INTEGRATION_COVERAGE_FILENAME }} # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: '*\*.xml'
+        reports: ' *.xml'
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
         reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
 
