--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -298,6 +298,9 @@ jobs:
             nunit-real-external-tests]
     
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
     - name: Download unit-test results
       uses: actions/download-artifact@v4
       with:
