--- a/ExternalMerlin.NUnit.RealDevices/ExternalMerlin.NUnit.RealDevices.csproj
+++ b/ExternalMerlin.NUnit.RealDevices/ExternalMerlin.NUnit.RealDevices.csproj
@@ -20,5 +20,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Saucery.Tests.Common\Saucery.Tests.Common.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="testhost.runtimeconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
