--- a/ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj
+++ b/ExternalMerlin.XUnit.RealDevices/ExternalMerlin.XUnit.RealDevices.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\Saucery.Tests.Common\Saucery.Tests.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testhost.runtimeconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
