just dotnet test

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -315,20 +315,23 @@ jobs:
     - name: Compile solution
       run: dotnet build -c ${{ env.CONFIG }}
 
-    - name: Run XUnit Integration Tests
-      uses: b3b00/coverlet-action@11.9
-      with:
-        testProject: ${{ env.M_TUNIT_PROJECT }}
-        output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
-        outputFormat: ${{ env.COVERAGE_FORMAT }}
-        #threshold: ${{ env.COVERAGE_THRESHOLD }}
-        excludes: '[Merlin.TUnit]Tests.*'
+    - name: Run TUnit Integration Tests
+      run: dotnet test
 
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: tunit-integration-test-results
-        path: ${{ env.TUNIT_INT_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+    # - name: Run TUnit Integration Tests
+    #   uses: b3b00/coverlet-action@11.9
+    #   with:
+    #     testProject: ${{ env.M_TUNIT_PROJECT }}
+    #     output: ${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
+    #     outputFormat: ${{ env.COVERAGE_FORMAT }}
+    #     threshold: ${{ env.COVERAGE_THRESHOLD }}
+    #     excludes: '[Merlin.TUnit]Tests.*'
+
+    # - name: Publish Artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: tunit-integration-test-results
+    #     path: ${{ env.TUNIT_INT_DIR }}/${{ env.TUNIT_INTEGRATION_COVERAGE_FILENAME }}
 
   generate-report:
     runs-on: ubuntu-latest
