--- a/ExternalMerlin.TUnit/ExternalMerlin.TUnit.csproj
+++ b/ExternalMerlin.TUnit/ExternalMerlin.TUnit.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Saucery.TUnit" Version="0.5.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Saucery.Tests.Common\Saucery.Tests.Common.csproj" />
+  </ItemGroup>
+
 </Project>
